add put request in openAPI and regenerate code
