# backend/implemented/controllers/employee_controller.py
@@ -5,7 +5,7 @@ import six
 from cassandra.cluster import Cluster
 from werkzeug.exceptions import NotFound
 
-from base.models import EmployeePostRequestBody
+from base.models import EmployeePostRequestBody, EmployeePutRequestBody
 from base.models.employee import Employee  # noqa: E501
 from base import util
 
@@ -69,4 +69,21 @@ def post_employees(employee_post_request_body=None):  # noqa: E501
     """
     if connexion.request.is_json:
         employee_post_request_body = EmployeePostRequestBody.from_dict(connexion.request.get_json())  # noqa: E501
+    return 'do some magic!'
+
+
+def put_employee(employee_id, employee_put_request_body=None):  # noqa: E501
+    """put_employee
+
+    update description for an employee # noqa: E501
+
+    :param employee_id:
+    :type employee_id: str
+    :param employee_put_request_body:
+    :type employee_put_request_body: dict | bytes
+
+    :rtype: Employee
+    """
+    if connexion.request.is_json:
+        employee_put_request_body = EmployeePutRequestBody.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
